# nrenderer

./: .gitignore  Readme.md
code/: .gitignore  CMakeLists.txt  main.cpp
code/app/: CMakeLists.txt
code/app/include/asset/: Asset.hpp  Item.hpp  LightItem.hpp  MaterialItem.hpp  ModelItem.hpp  SceneBuilder.hpp  TextureItem.hpp
code/app/include/importer/: Importer.hpp  ObjImporter.hpp  SceneImporterFactory.hpp  ScnImporter.hpp  TextureImporter.hpp
code/app/include/manager/: AssetManager.hpp  ComponentManager.hpp  Manager.hpp  RenderSettingsManager.hpp
code/app/include/templates/: MaterialTemplates.hpp
code/app/include/ui/: UI.hpp  UIContext.hpp
code/app/include/ui/views/: AssetView.hpp  ComponentProgressView.hpp  LogView.hpp  SceneView.hpp  ScreenView.hpp  View.hpp
code/app/include/utilities/: File.hpp  FileFetcher.hpp  GlImage.hpp  GlShader.hpp  Image.hpp  ImageLoader.hpp
code/app/src/asset/: Asset.cpp  SceneBuilder.cpp
code/app/src/importer/: ObjImporter.cpp  ScnImporter.cpp  TextureImporter.cpp
code/app/src/manager/: ComponentManager.cpp  Manager.cpp
code/app/src/templates/: MaterialTemplates.cpp
code/app/src/ui/: UI.cpp
code/app/src/ui/views/: AssetView.cpp  ComponentProgressView.cpp  LogView.cpp  SceneView.cpp  ScreenView.cpp  View.cpp
code/app/src/utilities/: FileFetcher.cpp  ImageLoader.cpp
code/components/: CMakeLists.txt
code/components/acc_path_tracing/: CMakeLists.txt
code/components/acc_path_tracing/include/: AccPathTracer.hpp  BVH.hpp  Bounds3.hpp  Camera.hpp  Onb.hpp  Ray.hpp  Timer.hpp  VertexTransformer.hpp
code/components/acc_path_tracing/include/intersections/: HitRecord.hpp  intersections.hpp
code/components/acc_path_tracing/include/samplers/: Hemisphere.hpp  Marsaglia.hpp  Sampler.hpp  Sampler1d.hpp  Sampler2d.hpp  Sampler3d.hpp  SamplerInstance.hpp  UniformInCircle.hpp  UniformInSquare.hpp  UniformSampler.hpp
code/components/acc_path_tracing/include/shaders/: Conductor.hpp  Glass.hpp  Glassdata.hpp  Lambertian.hpp  Microfacet.hpp  Scattered.hpp  Shader.hpp  ShaderCreator.hpp
code/components/acc_path_tracing/src/: AccPathTracer.cpp  Adapter.cpp  VertexTransformer.cpp
code/components/acc_path_tracing/src/intersections/: intersections.cpp
code/components/acc_path_tracing/src/shaders/: Conductor.cpp  Glass.cpp  Lambertian.cpp  Microfacet.cpp
code/components/example/: CMakeLists.txt
code/components/example/src/: Adapter.cpp
code/components/metropolis_light_transport/: CMakeLists.txt
code/components/metropolis_light_transport/include/: BVH.hpp  Bounds3.hpp  Camera.hpp  Metropolis.hpp  Onb.hpp  PathContribution.hpp  Ray.hpp  TKahanAdder.hpp  TMarkovChian.hpp  Timer.hpp  VertexTransformer.hpp
code/components/metropolis_light_transport/include/intersections/: HitRecord.hpp  intersections.hpp
code/components/metropolis_light_transport/include/samplers/: Hemisphere.hpp  Marsaglia.hpp  Sampler.hpp  Sampler1d.hpp  Sampler2d.hpp  Sampler3d.hpp  SamplerInstance.hpp  UniformInCircle.hpp  UniformInSquare.hpp  UniformSampler.hpp
code/components/metropolis_light_transport/include/shaders/: Lambertian.hpp  Scattered.hpp  Shader.hpp  ShaderCreator.hpp
code/components/metropolis_light_transport/src/: Adapter.cpp  Metropolis.cpp  VertexTransformer.cpp
code/components/ray_cast/: CMakeLists.txt
code/components/ray_cast/include/: Camera.hpp  Ray.hpp  RayCastRenderer.hpp  VertexTransformer.hpp
code/components/ray_cast/include/shaders/: Lambertian.hpp  (+3 more)
code/components/ray_cast/src/: Adapter.cpp  RayCastRenderer.cpp  VertexTransformer.cpp
code/components/simple_path_tracing/: CMakeLists.txt
code/components/simple_path_tracing/include/: Camera.hpp  Onb.hpp  Ray.hpp  SimplePathTracer.hpp  Timer.hpp  VertexTransformer.hpp
code/components/simple_path_tracing/src/: Adapter.cpp  SimplePathTracer.cpp  VertexTransformer.cpp
code/dependences/glad/: CMakeLists.txt
code/dependences/glad/src/: glad.c
code/dependences/gtest/: CMakeSettings.json
code/dependences/imgui/: CMakeLists.txt
code/dependences/imgui/src/: imgui_impl_glfw.cpp
code/include/common/: macros.hpp
code/include/component/: Component.hpp  ComponentFactory.hpp  Instance.hpp  RenderComponent.hpp
code/include/geometry/: vec.hpp
code/include/scene/: Camera.hpp  Light.hpp  Material.hpp  Model.hpp  Scene.hpp  Texture.hpp
code/include/server/: Logger.hpp  Screen.hpp  Server.hpp
code/server/component/: ComponentFactory.cpp  RenderComponent.cpp
code/server/server/: Logger.cpp  Screen.cpp  Server.cpp
code/test/: CMakeLists.txt  MaterialTest.cpp
(+36 files in other folders)
